# Try_app_dec_vs_hex_converter

./: Cargo.toml  README.md
src/: docu slint vs rust.txt  docu strings, &str, concatenate (+)  main.rs
ui/: app-window.slint
